# schmid_streaming

./: .gitignore  Cargo.toml  Rocket.toml  _cargo build cmd for rasp pi zero.txt  _ffmpeg cmd for new videos.txt  config.json
migrations/2022-08-20-123800_create_videos/: up.sql
migrations/2022-08-20-123959_create_series/: up.sql
migrations/2022-08-20-124133_create_seasons/: up.sql
migrations/2022-08-20-124156_create_episodes/: up.sql
src/: auth_middleware.rs  config.rs  ip_middleware.rs  lib.rs  models.rs  schema.rs  sqlite.rs
static/css/: base.css
static/js/: video-end.js
templates/: base.html.tera  index.html.tera  series_details.html.tera  sign-in.html.tera  watch.html.tera
