[package]
name = "schmid_streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"

rocket = { version = "0.5.0-rc.2" }

diesel = { version = "1.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
libsqlite3-sys = { version = "0.17.3", features = ["bundled"]}
rocket_seek_stream = {git="https://github.com/rydz/rocket_seek_stream"}

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]