[package]
name = "schmid_streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2" }
chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls", "sqlite", "chrono" ] }
rocket_seek_stream = { git="https://github.com/rydz/rocket_seek_stream" }
uuid = { version = "1.3.4", features = ["v4"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]