[package]
name = "schmid_streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5" }
chrono = "0.4.34"
lazy_static = "1.4.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-rustls", "sqlite", "chrono" ] }
rocket_seek_stream = { version = "0.2.6" }
uuid = { version = "1.7.0", features = ["v4"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]